--- a/contact.html
+++ b/contact.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Contact</title>
+    <title>Contact Me</title>
 </head>
 <body>
     <h2>Contact details</h2>
@@ -14,5 +14,15 @@
         <li>Insta handle- @mrinal_sharma_._</li>
         <li>Fictional Address</li>
     </ol>
+    <hr>
+    <form action="mailto:mrinalwork1@gmail.com" method="POST" enctype="text/plain">
+        <label>Your Name:</label>
+        <input type="text" name="yourname" id=""><br>
+        <label>Your Email:</label>
+        <input type="email" name="youremail" id=""><br>
+        <label>Your Message:</label><br>
+        <textarea name="name" id="" cols="30" rows="10"></textarea><br>
+        <input type="submit" name="" id="">
+    </form>
 </body>
 </html>
