--- a/index.html
+++ b/index.html
@@ -8,13 +8,21 @@
   </head>
   <body>
       <p></p>
-      <img src="images/blah1.png" alt="Mrinal Sharma" height="225">
-      <!--i also works-->
-    <h1>Mrinal Sharma</h1>
+      <table cellspacing="20">
+        <tr>
+          <td>
+            <img src="images/blah1.png" alt="Mrinal Sharma" height="200">
+          </td>
+          <td>
+            <h1>Mrinal Sharma</h1>
     <p><em><strong>Aspire to become successful in life. <a href="#">Student right now.</a></strong></em></p>
     <p><strong><a href="https://vtop.vit.ac.in/vtop/initialProcess">Vellore Institute of Technology</a></strong>, 
         Currently studying on ms teams and dont know when colleges are going to open.</p>
     <p>Learning web development.</p>
+          </td>
+        </tr>
+      </table>
+      <!--i also works-->
     <hr>
     <h3>Educational Background </h3>
     <ul>
@@ -24,8 +32,51 @@
         <li>VIT Vellore.</li>
         </ul>
     </ul>
-    <a href="hobbies.html"><h3>My Hobbies.</h3></a>
-    <a href="contact.html"><h3>Contact me</h3></a>
+    <hr>
+    <h3>Work Experience</h3>
+    <!--dont do designing in html only in css.....-->
+    <table>
+      <thead>
+        <tr>
+          <th>Dates</th>
+          <th>Places</th>
+        </tr>
+      </thead>
+      <tbody>
+      <tr> 
+        <td>2004-2009</td>
+        <td>DAV Gurgaon; Student</td>
+      </tr>
+      <tr>
+        <td>Till 2020</td>
+        <td>DPS Ranipur; Student</td>
+      </tr>
+      <tr>
+        <td>2021 </td>
+        <td>VIT Vellore</td>
+      </tr>
+      </tbody>
+      <tfoot></tfoot>
+    </table>
+    <hr>
+    <h3>Skills</h3>
+    <table cellspacing="10">
+      <tr>
+        <td>Web development</td>
+        <td>⭐️</td>
+        <td>Python</td>
+        <td>⭐️⭐️⭐️</td>
+      </tr>
+      <tr>
+        <td>iOS development</td>
+        <td></td>
+        <td>Data Structures</td>
+        <td>⭐️⭐️</td>
+      </tr>
+    </table>
+    <hr>
+    <a href="hobbies.html">My Hobbies.</a>
+    <a href="contact.html">Contact me</a>
        
   </body>
 </html>
