--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
       <table cellspacing="20">
         <tr>
           <td>
-            <img src="images/blah1.png" alt="Mrinal Sharma" height="200">
+            <img src="blah1.png" alt="Mrinal Sharma" height="200">
           </td>
           <td>
             <h1>Mrinal Sharma</h1>
